<resources>
    <string name="app_name">OUST</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_login">Sign in</string>

    <!-- Strings in Welcome Page -->
    <string name="welcome">Welcome</string>
    <string name="welcome_description">The Best Taxi Ride-Sharing Application For UST Community</string>
    <string name="welcome_login">Login</string>
    <string name="welcome_signup">Sign up</string>

    <!--Strings related to Bottom IconMenu-->
    <string name="menu_home">Home</string>
    <string name="menu_addroute">Add Route</string>
    <string name="menu_trasinfo">Transport Info</string>
    <string name="menu_settings">Settings</string>

    <!-- Strings related to SignIn -->
    <string name="login_btu_sign_in">Sign In</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_pas">Password</string>
    <string name="login_forgot">Forget Password?</string>

    <string name="login_user_error">Please enter your username </string>
    <string name="login_password_error">Please enter your password</string>

    <string name="login__error">Login Error</string>
    <string name="login_validation_error">Please verify your email address before using OUST</string>

    <string name="login_errortitle">Login </string>
    <string name="login_validation_sent">Verification email sent to </string>
    <string name="login_validation_fail">Failed to send verification email.</string>




    <!--Strings related to SignUp-->
    <string name="signup_username">Username :</string>
    <string name="signup_itsc">ITSC :</string>
    <string name="signup_password">Password :</string>

    <string name="signup_username_require">5 - 8 characters</string>
    <string name="signup_password_require">At least 6 characters and must contain numbers and letters</string>

    <string name="signup_hint_username">Please Enter Username</string>
    <string name="signup_hint_password">Please Enter Password</string>
    <string name="signup_hint_itsc">Please Enter Your ITSC Account</string>

    <string name="signup_btu_signup">Sign Up</string>

    <string name="signup_radio_student">Student</string>
    <string name="signup_radio_stafft">Staff</string>

    <string name="signup_gender">Gender</string>
    <string name="signup_radio_male">Male</string>
    <string name="signup_radio_female">Female</string>

    <string name="signup_username_error">- The length of username must be larger than 5 and smaller than 8 and must not be empty</string>
    <string name="signup_password_error">- The length of password must be larger than 5 and must not be empty</string>
    <string name="signup_password_error2">- Password must contain letters and numbers</string>


    <!--Strings related to slideMenu by Him-->
    <string name="setting">Setting</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>

    <!--String related to addRoute page by Him-->

    <string name="rm_name">Room Name(Optional)</string>
    <string name="pt">Prefer Time:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>

    <string name="create">Create</string>
    <string name="filter">Filter</string>


    <!-- filter dialog-->
    <string name="m_only">Male Only</string>
    <string name="f_only">Female Only</string>
    <string name="none">None</string>
    <string name="reset">Reset</string>

    <string name="nop">Passengers:</string>


    <!-- Setting Fragment-->
    <string name="content">Content</string>
    <string name="contact">Contact</string>
    <string name="setting_edit_profile">Edit Profile</string>
    <string name="setting_notification">Notification</string>
    <string name="setting_language">Language</string>
    <string name="setting_about_us">About Us</string>
    <string name="setting_logout">Logout</string>

    <!--Edit profile Fragment-->
    <string name="pro_p">Profile Picture</string>
    <string name="update">Update</string>
    <string name="updateusername_Success">You have successfully updated your username.</string>
    <string name="ch_password">Update Password:</string>
    <string name="old_password">Old Password:</string>
    <string name="new_password">New Password:</string>
    <string name="repeat_password">Repeat Password:</string>
    <string name="edit_pro_password_error">New Password must same as Repeat Password.</string>
    <string name="updatePass_Success">You have successfully updated your password.</string>
    <string name="updatePass_Fail">Password update failed.</string>

    <!-- Notification - Setting Fragment-->
    <string name="notification">Notification</string>

    <!--Notification Fragment-->
    <string name="enable_noti">Enable Notification</string>
    <!--Language Fragment-->
    <string name="lang">Language</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_get_start">GetStartActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="closeApp">Are you want to close this application?</string>





    <!--Location Related-->
    <string name="latitude_label">Latitude: %f</string>
    <string name="longitude_label">Longitude: %f</string>
    <string name="no_location_detected">No location detected. Make sure location is enabled on the device.</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>



    <string name="settings">Settings</string>

    <!--Progress Dialog-->
    <string name="progress_loading">Loading....</string>
    <string name="progress_matching">Matching....</string>
    <string name="progress_join">Joining Room....</string>
    <!--For Display-->
    <string name="location_HKUST_North">HKUST North Gate</string>
    <string name="location_HKUST_South">HKUST South Gate</string>
    <string name="location_Diamond_Hill">Diamond Hill MTR</string>
    <string name="location_Choi_Hung">Choi Hung MTR</string>
    <string name="location_Hang_Hau">Hang Hau MTR</string>
    <string name="location_Ngau_Tau_Kok">Ngau Tau Kok MTR</string>


    <!--Nav_Filter-->
    <string name="nav_automatching">Auto Matching</string>

    <string name="nav_starting_point">Start Point</string>
    <string name="nav_destination">Destination</string>

    <string name="nav_gender_filter">Gender Filter</string>
    <string name="nav_gender_none">None</string>
    <string name="nav_gender_male">Male</string>
    <string name="nav_gender_female">Female</string>

    <string name="nav_min_passengers">Minimum Passengers</string>

    <string name="nav_reset">Reset</string>
    <string name="nav_submit">Submit</string>


    <!-- Useless here. Can remove if spinner work-->
    <string-array name="start_choices">
        <item></item>
        <item>HKUST North Gate</item>
        <item>HKUST South Gate</item>
        <item>Diamond Hill MTR Station</item>
        <item>Choi Hung MTR Station</item>
        <item>Hang Hau MTR Station</item>
        <item>Ngau Tau Kok MTR Station</item>
    </string-array>

    <string-array name="des_choices">
        <item></item>
        <item>HKUST North Gate</item>
        <item>HKUST South Gate</item>
        <item>Diamond Hill MTR Station</item>
        <item>Choi Hung MTR Station</item>
        <item>Hang Hau MTR Station</item>
        <item>Ngau Tau Kok MTR Station</item>
    </string-array>

    <!--Chatroom created by Him-->
    <string name="date">Date:</string>
    <string name="time">Time:</string>

    <string name="chat_leave">Leave</string>
    <string name="chat_lock">Lock</string>
    <string name="btu_chat">Chatroom</string>

    <string name="room_join_error_title">Join Room Error</string>
    <string name="room_join_error_msg">You have already entered a Room. Press the ChatRoom button to enter the chat room</string>

    <string name="enter_message">Enter message</string>
    <string name="send">Send</string>

    <string name="room_rejoin_error_title">Chat Room Error</string>
    <string name="room_rejoin_error_msg">You have not entered any room</string>

    <string name="fare_est">HKD$</string>

    <string name="chatroom_title">Chatroom</string>
    <string name="chatroom_lockroom">You locked the room</string>
    <string name="chatroom_lockroom_error">Sorry, you are not the owner of this chat room. You have no privilege to lock this room. </string>

    <string name="chatroom_female_error">This room only allow female to join</string>
    <string name="chatroom_male_error">This room only allow male to join</string>

    <string name="chatroom_lock">Lock</string>
    <string name="chatroom_unlock">Unlock</string>



    <!--String related to Transport Info-->
    <string name="more"><a href="http://congregation.ust.hk/docs/Taxi_Call_Stations.pdf">More Taxi Call Stations...</a></string>
    <string name="bus">Bus:</string>
    <string name="minibus">Minibus:</string>
    <string name="taxi">Taxi:</string>


    <string name="automatch_select_error">You have to select starting location and destination</string>
    <string name="automatch__error">Auto Match Error</string>
    <string name="automatch__no_Room">There are no room match your criteria</string>

    <string name="submit_button">Submit</string>

    <string name="reset_title">Reset Password</string>
    <string name="forgotpass_sent">We have successfully sent the reset password email to your email address</string>
    <string name="forgotpass_not_sent">We can\'t send the reset password email to your email address</string>



</resources>
