<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/slide_setting"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/slide_help"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/slide_about"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/slide_feedback"
            android:title="@string/feedback" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/slide_logout"
            android:title="@string/logout" />
    </group>

</menu>
