<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fyp.ride_sharing_aos.activity.SignupActivity"
    android:background="@drawable/hkust_bgimg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/signup_username"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/signup_username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="15dp"
                android:background="@drawable/rounded_edittext"
                android:gravity="center"
                android:hint="@string/signup_hint_username" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/signup_password"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="15dp"
                android:background="@drawable/rounded_edittext"
                android:gravity="center"
                android:hint="@string/signup_hint_password"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/signup_itsc"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/signup_itsc"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="15dp"
                android:background="@drawable/rounded_edittext"
                android:gravity="center" />


            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/identity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/radio_usr_student"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@id/radio_usr_student"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_radio_student"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/radio_usr_staff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_radio_stafft"
                    android:textColor="@color/white" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/signup_gender"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/gender"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/radio_sex_male"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@id/radio_sex_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_radio_male"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/radio_sex_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_radio_female"
                    android:textColor="@color/white" />

            </RadioGroup>


            <ImageButton
                android:id="@+id/signup_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/signup"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:textAllCaps="false"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
