<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:background="#e0e0e0"
    tools:context="fyp.ride_sharing_aos.activity.AddRouteActivity">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            app:counterOverflowTextAppearance="@style/TextOverCount"
            android:theme="@style/all_black"
            >

            <EditText
                android:id="@+id/roomname"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/rm_name"
                android:inputType="text"
                android:textColor="@color/black" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            app:counterOverflowTextAppearance="@style/TextOverCount"
            android:theme="@style/all_black"
            >

            <EditText
                android:id="@+id/prefer_time"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/pt"
                android:inputType="time"
                android:textColor="@color/black" />

        </android.support.design.widget.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/start_spin"
                app:ms_text_color = "@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textColor="@color/black"
                android:textSize="20sp"
                />

        <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/des_spin"
                app:ms_text_color = "@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

                <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TableRow>
                <Button
                android:id="@+id/filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter"
                />
                </TableRow>
                </TableLayout>
                    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:map="http://schemas.android.com/apk/res-auto"
                        android:name="com.google.android.gms.maps.MapFragment"
                        android:id="@+id/map"
                        tools:context=".activity.AddRouteActivity"
                        android:layout_width="match_parent"
                        android:layout_height="272dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        map:cameraZoom="15"/>



                <Button
                android:id="@+id/create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:layout_marginRight="120dp"
                android:text="@string/create" />
    </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
